# iris-classification-website

./: README.md  Untitled.ipynb  model.pkl  pyproject.toml
app/: __init__.py  routes.py
app/templates/: base.html  index.html  result.html
