[tool.poetry]
name = "ml-website"
version = "0.1.0"
description = ""
authors = ["alfarizi <farizi1906@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_website"}]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.13.1"
pandas = "2.0"
flask = "^3.0.1"


[tool.poetry.group.dev.dependencies]
scikit-learn = "==1.3.*"
notebook = "^7.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
